--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,11 +8,12 @@
     <string name="action_settings">Settings</string>
 
     <string name="menu_home">Inicio</string>
+    <string name="menu_error">Error</string>
     <string name="menu_gallery">Gallery</string>
-    <string name="menu_slideshow">Slideshow</string>
-    <string name="menu_tools">Tools</string>
-    <string name="menu_share">Share</string>
-    <string name="menu_send">Send</string>
+    <string name="menu_rankingtons">Rankingtons</string>
+    <string name="menu_help">Help</string>
+    <string name="menu_suggestions">Suggestions</string>
+    <string name="menu_settings">Settings</string>
 
     <string name="facebook_app_id">190467239257312</string>
     <string name="fb_login_protocol_scheme">fb190467239257312</string>
