--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -95,10 +95,8 @@
     <string name="ocho_pm">20:00</string>
     <string name="nueve_pm">21:00</string>
     <string name="diez_pm">22:00</string>
-
-
-
-
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 
 </resources>
