--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,5 +65,26 @@
     <string name="success_add_materia">Profe, La materia se agrego correctamente!</string>
     <string name="add_otra_materia">Agregar otra materia</string>
     <string name="Saltar">Saltar por ahora</string>
+    
+    <string-array name="lista_profesores">
+        <item>Anabel Montero</item>
+        <item>Leonardo Florez</item>
+        <item>Julio Carreno</item>
+        <item>Camilo Canon</item>
+    </string-array>
+
+    <string-array name="lista_materias">
+        <item>ADOO</item>
+        <item>POO</item>
+        <item>Intro Compu Grafica</item>
+        <item>Ingesoft</item>
+    </string-array>
+
+    <string-array name="lista_materias_carrera">
+        <item>Anabel Montero</item>
+        <item>Leonardo Florez</item>
+        <item>Julio Carreno</item>
+        <item>Camilo Canon</item>
+    </string-array>
 
 </resources>
