--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -85,13 +85,13 @@
 
     <!--HORARIO DIAS-->
     <string name="hora">hora</string>
-    <string name="lunes">LUNES</string>
-    <string name="martes">MARTES</string>
-    <string name="miercoles">MIERCOLES</string>
-    <string name="jueves">JUEVES</string>
-    <string name="viernes">VIERNES</string>
-    <string name="sabado">SABADO</string>
-    <string name="domingo">DOMINGO</string>
+    <string name="lunes">lun</string>
+    <string name="martes">mar</string>
+    <string name="miercoles">mie</string>
+    <string name="jueves">jue</string>
+    <string name="viernes">vie</string>
+    <string name="sabado">sab</string>
+    <string name="domingo">dom</string>
     <!--HORARIO HORAS-->
     <string name="siete_am">7:00</string>
     <string name="ocho_am">8:00</string>
@@ -110,11 +110,7 @@
     <string name="nueve_pm">21:00</string>
     <string name="diez_pm">22:00</string>
 
-    <string name="SuggestionsTitle">Sugerencia</string>
-    <string name="ErrorTitle">Reportar error</string>
-    <string name="textSuggestion">Comentanos tus sugerencias</string>
-    <string name="textError">Comentanos tu error</string>
-    <string name="send">Enviar</string>
+
 
 
 
