--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,42 +77,21 @@
     <string name="apellido">Apellido</string>
     <string name="Politicas_privacidad">Acepto las politicas de privacidad</string>
     <string name="add_materia"><u>Añadir materias</u></string>
-    <string name="Nombre_materia">Nombre de la  materiaS</string>
-    <string name="Agregar">Agregar materiaS</string>
-    <string name="success_add_materia">Profe, La materiaS se agrego correctamente!</string>
-    <string name="add_otra_materia">Agregar otra materiaS</string>
+    <string name="Nombre_materia">Nombre de la  materia</string>
+    <string name="Agregar">Agregar materia</string>
+    <string name="success_add_materia">Profe, La materia se agrego correctamente!</string>
+    <string name="add_otra_materia">Agregar otra materia</string>
     <string name="Saltar">Saltar por ahora</string>
-    
-    <string-array name="lista_profesores">
-        <item>Anabel Montero</item>
-        <item>Leonardo Florez</item>
-        <item>Julio Carreno</item>
-        <item>Camilo Canon</item>
-    </string-array>
-
-    <string-array name="lista_materias">
-        <item>ADOO</item>
-        <item>POO</item>
-        <item>Intro Compu Grafica</item>
-        <item>Ingesoft</item>
-    </string-array>
-
-    <string-array name="lista_materias_carrera">
-        <item>Anabel Montero</item>
-        <item>Leonardo Florez</item>
-        <item>Julio Carreno</item>
-        <item>Camilo Canon</item>
-    </string-array>
 
     <!--HORARIO DIAS-->
     <string name="hora">hora</string>
-    <string name="lunes">lun</string>
-    <string name="martes">mar</string>
-    <string name="miercoles">mie</string>
-    <string name="jueves">jue</string>
-    <string name="viernes">vie</string>
-    <string name="sabado">sab</string>
-    <string name="domingo">dom</string>
+    <string name="lunes">LUNES</string>
+    <string name="martes">MARTES</string>
+    <string name="miercoles">MIERCOLES</string>
+    <string name="jueves">JUEVES</string>
+    <string name="viernes">VIERNES</string>
+    <string name="sabado">SABADO</string>
+    <string name="domingo">DOMINGO</string>
     <!--HORARIO HORAS-->
     <string name="siete_am">7:00</string>
     <string name="ocho_am">8:00</string>
@@ -131,7 +110,11 @@
     <string name="nueve_pm">21:00</string>
     <string name="diez_pm">22:00</string>
 
-
+    <string name="SuggestionsTitle">Sugerencia</string>
+    <string name="ErrorTitle">Reportar error</string>
+    <string name="textSuggestion">Comentanos tus sugerencias</string>
+    <string name="textError">Comentanos tu error</string>
+    <string name="send">Enviar</string>
 
 
 
