--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,14 +21,14 @@
     <string name="Ajust">Ajustes</string>
     <string name="BotonVolver">Volver</string>
     <string name="BotonEliminar_cuenta">Eliminar Cuenta </string>
-    <string name="BotonCambiar_Contra">Cambiar contraseÃ±a </string>
-    <string name="Text_ingrese">Ingrese nueva contraseÃ±a </string>
-    <string name="Text_confirm">Confirme la nueva contraseÃ±a </string>
+    <string name="BotonCambiar_Contra">Cambiar contraseña </string>
+    <string name="Text_ingrese">Ingrese nueva contraseña </string>
+    <string name="Text_confirm">Confirme la nueva contraseña </string>
     <string name="Text_Editarcorreo">Editar Correo </string>
-    <string name="Text_ingresecorreo">Ingrese el Nuevo correo ElectrÃ³nico </string>
-    <string name="Text_confirmecorreo">Confirme el Nuevo correo ElectrÃ³nico </string>
+    <string name="Text_ingresecorreo">Ingrese el Nuevo correo Electronico </string>
+    <string name="Text_confirmecorreo">Confirme el Nuevo correo Electronico </string>
     <string name="Text_confirm2">Confirmar </string>
-    <string name="BotonCerrarsecion">Cerrar sesiÃ³n </string>
+    <string name="BotonCerrarsecion">Cerrar sesion </string>
 
     <string name="Ajustes">Ajustes</string>
 
