--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,19 +5,20 @@
     <string name="nav_header_title">Android Studio</string>
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_search">Search</string>
 
     <string name="menu_home">Inicio</string>
     <string name="menu_error">Error</string>
-    <string name="menu_gallery">Gallery</string>
     <string name="menu_rankingtons">Rankingtons</string>
-    <string name="menu_help">Help</string>
-    <string name="menu_suggestions">Suggestions</string>
-    <string name="menu_settings">Settings</string>
+    <string name="menu_help">Ayuda</string>
+    <string name="menu_suggestions">Sugerencias</string>
+    <string name="menu_settings">Ajustes</string>
+    <string name="menu_exit">Cerrar Sesion</string>
 
     <string name="facebook_app_id">190467239257312</string>
     <string name="fb_login_protocol_scheme">fb190467239257312</string>
 
+    <string name="CambiarImg">Cambiar Imagen Perfil</string>
     <string name="Ajust">Ajustes</string>
     <string name="BotonVolver">Volver</string>
     <string name="BotonEliminar_cuenta">Eliminar Cuenta </string>
